--- a/CrudNetCore5/appsettings.json
+++ b/CrudNetCore5/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "connectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-7NINEBN\\MSSQLSERVER2016; Database=LibreriaV1; User Id=sa; Password=Sa123456;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
